--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BRGV</title>
+    <title>AK</title>
     <!--Bootstrap CSS CDN-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 <!--CSS stylesheet-->
@@ -71,9 +71,8 @@
                         <!-- <h6 class="text-uppercase font-os font-size-16 text-muted">About me</h6> -->
                     <h5 class="font-ram font-size-20 py-2">I'm Akash Kodiganti, a student, cloud architect and programmer</h5>
                     <p class="font-ram text-black-50 py-2">
-                        I'm a self taught Javascript programmer and front end developer. I am a full time Masters student in TU Ilmenau, Germany. I am pursuing Masters in Research in Computer and Systems Engineering. 
-                        I previously worked at Hitachi Ltd, Capgemini and Wipro Technologies as Senior Consultant, Senior Software Engineer, and Project Engineer respectively. I have keen interest in Machine learning, 
-                        Python programming and Cloud computing. I am focusing my skills towards Artificial Intelligence, AWS Cloud Solutions, and Industry 4.0 Automation.
+                        I am a full time Masters student in TU Ilmenau, Germany. I previously worked with Hitachi Ltd, Capgemini and Wipro Technologies as Senior Consultant, Senior Software Engineer, and Project Engineer respectively. 
+      
                     </p>
                     </div>
                     <div class="col-sm-4 pr-5">
@@ -89,7 +88,7 @@
                          <div class="col-sm-4">
                             <div class="d-flex flex-row flex-wrap ">
                                 <div class="d-flex flex-column">
-                                    <p class="font-ram"><b>CodePen </b><span class="text-black-50"><a href="" target="_blank" class="text-black-50">@Akash</a></span></p>
+                                    
                                     <p class="font-ram"><b>Email: </b><span class="text-black-50">akashkodiganti.iiitb@gmail.com</span></p>
                                     <p class="font-ram"><b>Github: </b><span class="text-black-50"><a href="https://github.com/akashkgithub" target="_blank" class="text-black-50">@akashkgithub</a></span></p> 
                                 </div>
@@ -278,7 +277,7 @@
                 <div class="row">
                     <div class="col-sm-12 col-md-6 pb-4">
                         <img src="./assets/img/portfolio/watchNext.png" alt="portfolio_4" class="img-fluid">
-                        <p class=" my-3 font-ram font-size-16 text-black-50 text-center"> Movie browse application</p>
+                        <p class=" my-3 font-ram font-size-16 text-black-50 text-center"> I have keen interest in Machine learning, Python programming and Cloud computing. I am focusing my skills towards Artificial Intelligence, AWS Cloud Solutions, and Industry 4.0 Automation.</p>
                         <div class="col-lg-12 port_button mt-1">
                             <a href="https://github.com/brgv-code/watchNext/" target="_blank"> <button class="btn btn-dark mr-3 my-3"> Github link</button></a> 
                             <a href="https://brgv-code.github.io/watchNext/" target="_blank"><button class="btn btn-dark  my-3"> Live demo</button></a>
