--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@
                     </div>
                     <div class="row py-5">
                         <div class="col-sm-6">
-                            <h6 class="font-ram text-uppercase font-size-16 text-dark">AK</h6>
+                            <h6 class="font-ram text-uppercase font-size-16 text-dark">Akash Kodiganti</h6>
                             <p class="font-ram font-size-16 w-50 text-black-50">
                             </p>
                             <p class="font-size-16 font-ram text-black-50 pt-3">PHONE: +4915145400233</p>
@@ -446,7 +446,7 @@
                     </div>
                     <div class="row bg-light py-5">
                         <div class="col-sm-4 my-5 text-center">
-                            <h6 class="font-ram font-size-16 text-black-50">&copy;2021 Akash Kodiganti All rights reserved</h6>
+                            <h6 class="font-ram font-size-16 text-black-50">&copy;2021 AK</h6>
                         </div>
                         <div class="col-sm-4 my-4 text-center">
                             <div class="footer-title ">
@@ -457,8 +457,7 @@
                         <div class="col-sm-4 my-5 text-center">
                             <span class="mr-3"><a href="https://github.com/akashkgithub"><i class="fab fa-github text-dark" aria-hidden="true"></i></a></span>
                             <span class="mr-3"><a href="https://www.linkedin.com/in/akashkodiganti"><i class="fab fa-linkedin text-dark" aria-hidden="true"></i></a></span>
-                            <span class="mr-3"><a href="https://tu-ilmenau.academia.edu/AkashAcademia"><i class="fab fa-medium text-dark" aria-hidden="true"></i></a></span>
-                        </div>
+                            </div>
                     </div>
                 </div>
             </footer>
