--- a/index.html
+++ b/index.html
@@ -143,9 +143,19 @@
                         
                     </div>
                     <div class="bar-1 pb-3">
+                           <div class="d-flex flex-row justify-content-between">
+                               <p class="font-ram font-size-16">ServiceNow</p>
+                               <span class="font-ram font-size-16">90%</span>
+                           </div>
+                           <div class="progress" style="height:3px" >
+                               <div class="progress-bar bgcolor-black" role="progressbar" style="width:80%">
+                               </div>
+                           </div>
+                    </div>
+                    <div class="bar-1 pb-3">
                         <div class="d-flex flex-row justify-content-between">
-                            <p class="font-ram font-size-16">ServiceNow</p>
-                            <span class="font-ram font-size-16">90%</span>
+                            <p class="font-ram font-size-16">Tools*</p>
+                            <span class="font-ram font-size-16">70%</span>
                         </div>
                         <div class="progress" style="height:3px">
                             <div class="progress-bar bgcolor-black" role="progressbar" style="width:70%">
@@ -166,6 +176,7 @@
                     </div>
                     </div>
                 </div>
+                <p> Tools* - Jira, Postman, UI Path, Google Assistant, Dell Boomi, UI Path, Alexa </p>
             </section>
 
 
