--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                        <div class="bar-1 pb-3">
                         <div class="d-flex flex-row justify-content-between">
                             <p class="font-ram font-size-16">Python, Javascript</p>
-                            <span class="font-ram font-size-16">70%</span>
+                            <span class="font-ram font-size-16">65%</span>
                         </div>
                         <div class="progress" style="height:3px">
                             <div class="progress-bar bgcolor-black" role="progressbar" style="width:80%">
@@ -155,7 +155,7 @@
                     <div class="bar-1 pb-3">
                         <div class="d-flex flex-row justify-content-between">
                             <p class="font-ram font-size-16">Tools*</p>
-                            <span class="font-ram font-size-16">70%</span>
+                            <span class="font-ram font-size-16">60%</span>
                         </div>
                         <div class="progress" style="height:3px">
                             <div class="progress-bar bgcolor-black" role="progressbar" style="width:70%">
@@ -166,7 +166,7 @@
                     <div class="bar-1 pb-3">
                         <div class="d-flex flex-row justify-content-between">
                             <p class="font-ram font-size-16">Machine Learning</p>
-                            <span class="font-ram font-size-16">70%</span>
+                            <span class="font-ram font-size-16">65%</span>
                         </div>
                         <div class="progress" style="height:3px">
                             <div class="progress-bar bgcolor-black" role="progressbar" style="width:80%">
@@ -176,7 +176,7 @@
                     </div>
                     </div>
                 </div>
-                <p> Tools* - Jira, Postman, UI Path, Google Assistant, Dell Boomi, UI Path, Alexa </p>
+                <p class="font-ram font-size-16"> Tools* - Jira, Postman, Google Assistant, Dell Boomi, UI Path, Alexa </p>
             </section>
 
 
@@ -461,7 +461,7 @@
                         </div>
                         <div class="col-sm-4 my-4 text-center">
                             <div class="footer-title ">
-                                <a href="#" class="navbar-brand font-staat font-size-40 text-dark">AK</a>
+                                <a href="#" class="navbar-brand font-staat font-size-40 text-dark text-center">AK</a>
                                 <p class="description font-os font-size-16 text-uppercase">Akash Kodiganti</p>
                             </div>
                         </div>
