--- a/index.html
+++ b/index.html
@@ -198,9 +198,9 @@
                             <span class="icon text-secondary">
                                 <i class="fas fa-laptop fa-3x"></i>
                             </span>
-                            <h4 class="fontram py-4">Web Design</h4>
+                            <h4 class="fontram py-4">Sample1</h4>
                             <p class="font-ram font-size-16 text-black-50">
-                                A clean , responsive design of a website.
+                                sample description.
                             </p>
                         </div>
                     </div>
@@ -209,31 +209,21 @@
                             <span class="icon text-secondary">
                                 <i class="far fa-lightbulb fa-3x"></i>
                             </span>
-                            <h4 class="fontram py-4">Developement</h4>
+                            <h4 class="fontram py-4">Sample 2</h4>
                             <p class="font-ram font-size-16 text-black-50">
-                               Developement and buiding of the website with clear and consice code.
+                               sample 2 description.
                             </p>
                         </div>
                     </div>
-                    <div class="col-md-4 col-sm-4 mb-4 text-center">
-                        <div class="panel border p-4">
-                            <span class="icon text-secondary">
-                                <i class="fas fa-camera fa-3x"></i>
-                            </span>
-                            <h4 class="fontram py-4">Photography</h4>
-                            <p class="font-ram font-size-16 text-black-50">
-                             Contact for budget friendly photography services! 
-                            </p>
-                        </div>
-                    </div> -->
+                     -->
                     <!-- <div class="col-md-4 col-sm-4 mb-4 text-center">
                         <div class="panel border p-4">
                             <span class="icon text-secondary">
                                 <i class="fas fa-chart-line fa-3x"></i>
                             </span>
-                            <h4 class="fontram py-4">Marketing</h4>
+                            <h4 class="fontram py-4">Sample 1</h4>
                             <p class="font-ram font-size-16 text-black-50">
-                                We all love to seem smarter than we really are, and one of the most effective ways to achieve this effect is to use professional jargon!
+                                sample description
                             </p>
                         </div>
                     </div>
@@ -242,23 +232,13 @@
                             <span class="icon text-secondary">
                                 <i class="fas fa-mobile fa-3x"></i>
                             </span>
-                            <h4 class="fontram py-4">Fully Responsive</h4>
+                            <h4 class="fontram py-4">Sample 2</h4>
                             <p class="font-ram font-size-16 text-black-50">
-                                We all love to seem smarter than we really are, and one of the most effective ways to achieve this effect is to use professional jargon!
+                                Sample 2 description
                             </p>
                         </div>
                     </div>
-                    <div class="col-md-4 col-sm-4 mb-4 text-center">
-                        <div class="panel border p-4">
-                            <span class="icon text-secondary">
-                                <i class="fas fa-directions fa-3x"></i>
-                            </span>
-                            <h4 class="fontram py-4">Art Direction</h4>
-                            <p class="font-ram font-size-16 text-black-50">
-                                We all love to seem smarter than we really are, and one of the most effective ways to achieve this effect is to use professional jargon!
-                            </p>
-                        </div>
-                    </div> -->
+                     -->
                 <!-- </div> -->
             <!-- </section> -->
             <!-- #services -->
@@ -292,50 +272,50 @@
                 <div class="row">
                     <div class="col-sm-12 col-md-6 pb-4">
                         <img src="./assets/img/portfolio/watchNext.png" alt="portfolio_4" class="img-fluid">
-                        <p class=" my-3 font-ram font-size-16 text-black-50 text-center"> I have keen interest in Machine learning, Python programming and Cloud computing. I am focusing my skills towards Artificial Intelligence, AWS Cloud Solutions, and Industry 4.0 Automation.</p>
+                        <p class=" my-3 font-ram font-size-16 text-black-50 text-center"> Saving text: I have keen interest in Machine learning, Python programming and Cloud computing. I am focusing my skills towards Artificial Intelligence, AWS Cloud Solutions, and Industry 4.0 Automation.</p>
                         <div class="col-lg-12 port_button mt-1">
-                            <a href="https://github.com/brgv-code/watchNext/" target="_blank"> <button class="btn btn-dark mr-3 my-3"> Github link</button></a> 
-                            <a href="https://brgv-code.github.io/watchNext/" target="_blank"><button class="btn btn-dark  my-3"> Live demo</button></a>
+                            <a href="URL1" target="_blank"> <button class="btn btn-dark mr-3 my-3"> Github link</button></a> 
+                            <a href="URL1" target="_blank"><button class="btn btn-dark  my-3"> Live demo</button></a>
                         </div>
                     </div>
                     <div class="col-sm-12 col-md-6 pb-4">
                         <img src="./assets/img/portfolio/tourHut.png" alt="tourHut" class="img-fluid">
-                        <p class=" my-3 font-ram font-size-16 text-black-50 text-center"> tourHut - Travel agency theme</p>
+                        <p class=" my-3 font-ram font-size-16 text-black-50 text-center"> sample 2</p>
                         <div class="col-lg-12 port_button mt-1">
-                            <a href="https://github.com/brgv-code/tourHut" target="_blank"> <button class="btn btn-dark mr-3 my-3"> Github link</button></a> 
-                            <a href="https://brgv-code.github.io/tourHut/" target="_blank"><button class="btn btn-dark  my-3"> Live demo</button></a>
+                            <a href="URL2" target="_blank"> <button class="btn btn-dark mr-3 my-3"> Github link</button></a> 
+                            <a href="URL2" target="_blank"><button class="btn btn-dark  my-3"> Live demo</button></a>
                         </div>
                     </div>
                     <div class="col-sm-12 col-md-6 pb-4">
                         <img src="./assets/img/portfolio/port_4.png" alt="portfolio_4" class="img-fluid">
-                        <p class=" my-3 font-ram font-size-16 text-black-50 text-center"> Movie Comparing website</p>
+                        <p class=" my-3 font-ram font-size-16 text-black-50 text-center">Sample 3</p>
                         <div class="col-lg-12 port_button mt-1">
-                            <a href="https://github.com/brgv-code/movieComp/" target="_blank"> <button class="btn btn-dark mr-3 my-3"> Github link</button></a> 
-                            <a href="https://brgv-code.github.io/movieComp/" target="_blank"><button class="btn btn-dark  my-3"> Live demo</button></a>
+                            <a href="URL3" target="_blank"> <button class="btn btn-dark mr-3 my-3"> Github link</button></a> 
+                            <a href="URL3" target="_blank"><button class="btn btn-dark  my-3"> Live demo</button></a>
                         </div>
                     </div>
                     <div class="col-sm-12 col-md-6 pb-4">
                         <img src="./assets/img/portfolio/port1.png" alt="portfolio_4" class="img-fluid">
-                        <p class=" my-3 font-ram font-size-16 text-black-50 text-center"> Portfolio website using Angular 8</p>
+                        <p class=" my-3 font-ram font-size-16 text-black-50 text-center"> Sample 4</p>
                         <div class="col-lg-12 port_button mt-1">
-                            <a href="https://github.com/brgv-code/angular8_portfolio" target="_blank"> <button class="btn btn-dark mr-3 my-3"> Github link</button></a> 
-                            <a href="https://brgv-code.github.io/angular8_portfolio/#/" target="_blank"><button class="btn btn-dark  my-3"> Live demo</button></a>
+                            <a href="URL4" target="_blank"> <button class="btn btn-dark mr-3 my-3"> Github link</button></a> 
+                            <a href="URL4" target="_blank"><button class="btn btn-dark  my-3"> Live demo</button></a>
                         </div>
                     </div>
                     <div class="col-sm-12 col-md-6 pb-4">
                         <img src="./assets/img/portfolio/port_2.png" alt="portfolio_4" class="img-fluid">
-                        <p class=" my-3 font-ram font-size-16 text-black-50 text-center"> Personal portfolio website with fixed sidebar</p>
+                        <p class=" my-3 font-ram font-size-16 text-black-50 text-center"> Sample 5</p>
                         <div class="col-lg-12 port_button mt-1">
-                            <a href="https://github.com/brgv-code/portfolio-with-side-menu" target="_blank"><button class="btn btn-dark mr-3 my-3">Github link</button> </a>
-                            <a href="http://bhargav-virupaakshi.netlify.app/" target="_blank"> <button class="btn btn-dark  my-3"> Live demo</button></a> 
+                            <a href="URL5" target="_blank"><button class="btn btn-dark mr-3 my-3">Github link</button> </a>
+                            <a href="URL5" target="_blank"> <button class="btn btn-dark  my-3"> Live demo</button></a> 
                         </div>
                     </div>
                     <div class="col-md-6  pb-4">
                         <img src="./assets/img/portfolio/port_3.png" alt="portfolio_4" class="img-fluid">
-                        <p class=" my-3 font-ram font-size-16 text-black-50 text-center"> Responsive Bootstrap parallax website </p>
+                        <p class=" my-3 font-ram font-size-16 text-black-50 text-center"> Sample 6 </p>
                         <div class="col-lg-12 port_button mt-1">
-                            <a href="https://github.com/brgv-code/parallax_website" target="_blank"><button class="btn btn-dark mr-3 my-3">Github link</button> </a>
-                            <a href="https://brgv-parallax.netlify.app" target="_blank"> <button class="btn btn-dark  my-3"> Live demo</button></a> 
+                            <a href="URL6" target="_blank"><button class="btn btn-dark mr-3 my-3">Github link</button> </a>
+                            <a href="URL6" target="_blank"> <button class="btn btn-dark  my-3"> Live demo</button></a> 
                         </div>
                     </div>
                 </div>
@@ -356,7 +336,7 @@
                             <img src="./assets/img/clients/resp_1.jpg" alt="card_img" class="card-img-top">
                             <div class="card-body">
                                 <p class="font-ram font-size-16 text-black-50">in <b class="text-uppercase text-dark">lifestyle</b></p>
-                                <h5 class="card-title font-ram">Responsive Design</h5>
+                                <h5 class="card-title font-ram">Sample</h5>
                                 <p class="card-text text-black-50">
                                     This is, maybe, one of the most interesting blog introduction about me examples we have found.
                                 </p>
@@ -368,7 +348,7 @@
                             <img src="./assets/img/clients/resp_2.jpg" alt="card_img" class="card-img-top">
                             <div class="card-body">
                                 <p class="font-ram font-size-16 text-black-50">in <b class="text-uppercase text-dark">lifestyle</b></p>
-                                <h5 class="card-title font-ram">Responsive Design</h5>
+                                <h5 class="card-title font-ram">Sample 2</h5>
                                 <p class="card-text text-black-50">
                                     This is, maybe, one of the most interesting blog introduction about me examples we have found.
                                 </p>
@@ -380,7 +360,7 @@
                             <img src="./assets/img/clients/resp_3.jpg" alt="card_img" class="card-img-top">
                             <div class="card-body">
                                 <p class="font-ram font-size-16 text-black-50">in <b class="text-uppercase text-dark">lifestyle</b></p>
-                                <h5 class="card-title font-ram">Responsive Design</h5>
+                                <h5 class="card-title font-ram">Sample 3</h5>
                                 <p class="card-text text-black-50">
                                     This is, maybe, one of the most interesting blog introduction about me examples we have found.
                                 </p>
@@ -392,7 +372,7 @@
                             <img src="./assets/img/clients/resp_4.jpg" alt="card_img" class="card-img-top">
                             <div class="card-body">
                                 <p class="font-ram font-size-16 text-black-50">in <b class="text-uppercase text-dark">lifestyle</b></p>
-                                <h5 class="card-title font-ram">Responsive Design</h5>
+                                <h5 class="card-title font-ram">Sample 4</h5>
                                 <p class="card-text text-black-50">
                                     This is, maybe, one of the most interesting blog introduction about me examples we have found.
                                 </p>
@@ -404,7 +384,7 @@
                             <img src="./assets/img/clients/resp_5.jpg" alt="card_img" class="card-img-top">
                             <div class="card-body">
                                 <p class="font-ram font-size-16 text-black-50">in <b class="text-uppercase text-dark">lifestyle</b></p>
-                                <h5 class="card-title font-ram">Responsive Design</h5>
+                                <h5 class="card-title font-ram">Sample 5</h5>
                                 <p class="card-text text-black-50">
                                     This is, maybe, one of the most interesting blog introduction about me examples we have found.
                                 </p>
@@ -416,7 +396,7 @@
                             <img src="./assets/img/clients/resp_6.jpg" alt="card_img" class="card-img-top">
                             <div class="card-body">
                                 <p class="font-ram font-size-16 text-black-50">in <b class="text-uppercase text-dark">lifestyle</b></p>
-                                <h5 class="card-title font-ram">Responsive Design</h5>
+                                <h5 class="card-title font-ram">Sample 6</h5>
                                 <p class="card-text text-black-50">
                                     This is, maybe, one of the most interesting blog introduction about me examples we have found.
                                 </p>
