--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                         <div class="d-flex flex-column">
                             <p class="font-ram"><b>LinkedIn </b><span class="text-black-50"><a href="https://www.linkedin.com/in/akashkodiganti/" target="_blank" class="text-black-50">@akashkodiganti</a></span></p>
                             <p class="font-ram"><b>Website: </b><span class="text-black-50"> <a href="https://akashkgithub.github.io/portfolio/" target="_blank" class="text-black-50">Akash Kodiganti</a></span></p>
-                            <p class="font-ram"><b>Phone No: </b><span class="text-black-50">+4915145400233</span></p>
+                            <p class="font-ram"><b>Phone No: </b><span class="text-black-50">+4900011122233</span></p>
                          </div>
                          </div>
                          <!-- <button class="btn btn-dark text-uppercase mr-3 mt-4">Hire Me</button> -->
@@ -420,7 +420,7 @@
                             <p class="font-size-16 font-ram text-black-50 pt-3">PHONE: +4915145400233</p>
                             <!-- <p class="font-size-16 font-ram text-black-50">FAX: +1234567890</p> -->
                             <p class="font-size-16 font-ram text-black-50">EMAIL: akashkodiganti.iiitb@gmail.com</p>
-                            <p class="font-size-16 font-ram text-black-50">Address: Ilmenau, Germany</p>
+                            <p class="font-size-16 font-ram text-black-50">Address: Germany</p>
                         </div>
                         <div class="col-sm-6 py-4 px-4">
                             <h6 class="text-uppercase font-ram font-size-16">Get in touch</h6>
